# SynaptogenML

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  create_example_env.sh  pyproject.toml  requirements.txt
.github/workflows/: conv2d_tests.yml  conv_tests.yml  linear_tests.yml  ruff.yml  tiled_linear_tests.yml
examples/: mnist_toy_example.ipynb
synaptogen_ml/: memristor_modules.py  memristor_tests.py  quant_modules.py  synaptogen.py
synaptogen_ml/memristor_modules/: __init__.py  config.py  conv.py  linear.py  memristor.py  util.py
tests/: memristor_tests.py  mnist_helper.py  test_mnist_conv1d.py  test_mnist_conv2d.py  test_mnist_linear.py  test_mnist_tiling_linear.py
torch_memristor/: default_params.json  memristor_modules.py  memristor_tests.py  quant_modules.py  synaptogen.py
